--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,10 +29,9 @@ jobs:
       - name: run code quality checks
         run: 'python3 -m flake8'
 
-      - name: run tests and coverage
+      - name: run tests
         run: |
-          python3 -m coverage run -m pytest
-          python3 -m coverage report -i --fail-under=0
+          python3 -m pytest
 
       - name: build wheel
         run: 'python3 setup.py bdist_wheel'
